--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "WhatsApp Export Viewer",
   "copyright": "Copyright © 2022 OnPointCoding",
   "appId": "net.onpointcoding.WhatsAppExportViewer",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A program for viewing WhatsApp exported chats in a nice GUI with chat bubbles.",
   "main": "src/index.js",
   "scripts": {
@@ -67,6 +67,7 @@
     "@smui/layout-grid": "^7.0.0-beta.0",
     "@smui/list": "^7.0.0-beta.0",
     "@smui/select": "^7.0.0-beta.0",
+    "@smui/textfield": "^7.0.0-beta.0",
     "@smui/tooltip": "^7.0.0-beta.0",
     "@smui/top-app-bar": "^7.0.0-beta.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
