--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "WhatsApp Export Viewer",
   "copyright": "Copyright © 2022 OnPointCoding",
   "appId": "net.onpointcoding.WhatsAppExportViewer",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "A program for viewing WhatsApp exported chats in a nice GUI with chat bubbles.",
   "main": "src/index.js",
   "scripts": {
@@ -62,29 +62,29 @@
   "homepage": "https://software.onpointcoding.net/whatsappexportviewer",
   "devDependencies": {
     "@material/typography": "^14.0.0",
-    "@smui/button": "^7.0.0-beta.0",
-    "@smui/dialog": "^7.0.0-beta.0",
-    "@smui/icon-button": "^7.0.0-beta.0",
-    "@smui/layout-grid": "^7.0.0-beta.0",
-    "@smui/list": "^7.0.0-beta.0",
-    "@smui/select": "^7.0.0-beta.0",
-    "@smui/textfield": "^7.0.0-beta.0",
-    "@smui/tooltip": "^7.0.0-beta.0",
-    "@smui/top-app-bar": "^7.0.0-beta.0",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "concurrently": "^7.0.0",
-    "electron": "^19.0.6",
-    "electron-builder": "^23.0.2",
-    "smui-theme": "^7.0.0-beta.0",
-    "svelte": "^3.44.0",
-    "svelte-markdown": "^0.2.3",
-    "vite": "^3.1.8"
+    "@smui/button": "^8.0.0-beta.3",
+    "@smui/dialog": "^8.0.0-beta.3",
+    "@smui/icon-button": "^8.0.0-beta.3",
+    "@smui/layout-grid": "^8.0.0-beta.3",
+    "@smui/list": "^8.0.0-beta.3",
+    "@smui/select": "^8.0.0-beta.3",
+    "@smui/textfield": "^8.0.0-beta.3",
+    "@smui/tooltip": "^8.0.0-beta.3",
+    "@smui/top-app-bar": "^8.0.0-beta.3",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "concurrently": "^9.1.2",
+    "electron": "^33.2.1",
+    "electron-builder": "^25.1.8",
+    "smui-theme": "^8.0.0-beta.3",
+    "svelte": "^5.16.1",
+    "svelte-markdown": "^0.4.1",
+    "vite": "^6.0.7"
   },
   "dependencies": {
-    "electron-updater": "^5.3.0",
-    "env-paths": "^2.2.1",
-    "make-dir": "^3.1.0",
+    "electron-updater": "^6.3.9",
+    "env-paths": "^3.0.0",
+    "make-dir": "^5.0.0",
     "readline": "^1.3.0",
-    "typescript": "^4.8.4"
+    "typescript": "^5.7.2"
   }
 }
