Use x64 and arm64 archs for mac builds

--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
     "mac": {
       "category": "public.app-category.productivity",
       "hardenedRuntime": true,
-      "gatekeeperAssess": false
+      "gatekeeperAssess": false,
+      "target": [
+        {
+          "target": "default",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ]
     },
     "nsis": {
       "artifactName": "${productName}_setup_${version}.${ext}"
